--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 .footer {
+	
     &-kasa{
         display: flex;
         gap: 6px;
@@ -6,11 +7,19 @@
         justify-content: center;
     }
 	&-wrapper {
-		height: 12.5rem;
-		margin-top: auto;
+		position: absolute;		
+		height: 12.5rem;		
 		background-color: #000000;
 		color: #ffffff;
-		text-align: center;
+		text-align: center;		
+		left: 0;		
+		width: 100%;
+		bottom: 0;
+		
+		
+		
+
+		
         
 	}
 	&-logo {
