--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -1,6 +1,6 @@
 @mixin banner {  
   .backImg {
-    margin-top: 50px;
+    margin: 50px auto 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,6 +8,8 @@
     background-position: center;
     overflow: hidden;
     position: relative;
+    max-width: 1240px;
+    width: 100%;
     height: 223px;
     border: 1px solid black;
     border-radius: 25px;
