--- a/front/src/pages/A-propos/Apropos.scss
+++ b/front/src/pages/A-propos/Apropos.scss
@@ -1,31 +1,31 @@
-.backImg1{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    position: relative;
-    height: 223px;
-    border: 1px solid black;
+.backImg1 {
+  margin: 50px auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  position: relative;
+  max-width: 1240px;
+  width: 100%;
+  height: 223px;
+  border: 1px solid black;
+  border-radius: 25px;
+  box-shadow: 0 6px #f6f6f6;
+  background-image: url('../../assets/aPropos.png');
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0.3;
     border-radius: 25px;
-    box-shadow: 0 6px #f6f6f6; 
-    background-image:url('../../assets/aPropos.png');
-    
-    &:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: black;
-        opacity: 0.3;
-        border-radius: 25px;
-        mix-blend-mode: darken;
-        pointer-events: none;
-      }
+    mix-blend-mode: darken;
+    pointer-events: none;
+  }
 }
-
-
