--- a/front/src/components/Collapse/Collapse.scss
+++ b/front/src/components/Collapse/Collapse.scss
@@ -3,7 +3,7 @@
 .collapse {
 	display: flex;
 	align-items: center;
-	height: 1.875rem;
+	height: 54px;
 	padding-left: 0.75rem;
 	border: none;
 	border-radius: 0.3125rem;
@@ -40,7 +40,7 @@
 
 	&-content {
 		overflow: hidden;
-		transition: max-height 0.6s ease;
+		
 	}
 
 	&-text {
