--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 @import '../../style.scss';
+
 .footer {
 	
     &-kasa{
@@ -8,26 +9,31 @@
         justify-content: center;
     }
 	&-wrapper {
-		position: absolute;		
-		height: 12.5rem;		
-		background-color: #000000;
-		color: #ffffff;
-		text-align: center;		
-		left: 0;		
-		width: 100%;
-		
-		
-		
-		
-
-		
+		 margin-top: auto;
+		 position: absolute;		 		 
+		 left: 0;
+		 right: 0;			 	
+		 width: 100%;
+		 background-color: black;
+		 color: #fff;
+		 text-align: center;
+		 padding: 10px;	
+		 	
         
 	}
+
+	&-logos {
+		display: flex;
+		justify-content: center;
+		gap: 5px;
+	}
+
 	&-logo {
 		height: 2.25rem;
 		margin-top: 3.75rem;
 		
 	}
+
 	&-credit {
 		margin-top: 2.5rem;
 		font-size: 24px;
