--- a/front/src/components/Gallery/Gallery.scss
+++ b/front/src/components/Gallery/Gallery.scss
@@ -2,8 +2,7 @@
 
 .gallery,
 .image {
-	height: 15.9375rem;
-	
+	height: 415px;	
 }
 
 .gallery {
@@ -13,40 +12,36 @@
 .image {
 	width: 100%;
 	object-fit: cover;
-	border-radius: 0.625rem;
+	border-radius: 25px;
 }
 
 .right-arrow,
 .left-arrow {
 	z-index: 1;
 	position: absolute;
-	top: 50%;
-	width: 0.75rem;
-	height: 1.375rem;
+	top: 40%;
+	width: 46px;
+	height: 79px;
+	flex-shrink: 0;
 	cursor: pointer;
-	user-select: none;
-	
+	user-select: none;	
 }
 
 .right-arrow {
-	right: 0.3125rem;
-	transform: rotate(180deg);
-	
+	right: 50px;
+	transform: rotate(180deg);	
 }
 
 .left-arrow {
-	left: 0.3125rem;
-	
+	left: 50px;	
 }
 
 .slide {
-	transform: scale(0.92);
-	opacity: 0;
-	transition-duration: 1s;
-	&.active {
-		width: 100%;
-		transform: scale(1);
-		opacity: 1;
-		transition-duration: 1s;
+	margin-top: 50px;
+	
+	transition-duration: 0.2s;
+	&.active {		
+		transition-duration: 0.2s;			
+		margin-inline: auto;
 	}
 }
