--- a/front/src/pages/Annonces/Annonces.scss
+++ b/front/src/pages/Annonces/Annonces.scss
@@ -2,7 +2,7 @@
 
 .annonce {
 	&-title {
-		margin-top: 0.9375rem;
+		margin-top: 30px;
 		margin-bottom: 0;
 		color: $primary-color;
 		font-size: 1.125rem;
@@ -59,4 +59,7 @@
 		
 	}
 }
-
+.sectionAnnonce{
+	max-width: 1240px;
+	margin: 0 auto;
+}
