--- a/front/src/pages/Annonces/Annonces.scss
+++ b/front/src/pages/Annonces/Annonces.scss
@@ -81,6 +81,9 @@
 .description-equipments-wrapper{
 	display: flex;
 	justify-content: space-between;
-    margin-top: 24px;
+    margin-top: 5px;
 	gap: 45px;
 }
+.custom-collapse {
+	width: 45%;
+  }
