--- a/front/src/components/Tag/Tag.scss
+++ b/front/src/components/Tag/Tag.scss
@@ -6,7 +6,7 @@
 	margin-block: 0.75rem;
 	margin-right: 0.625rem;
 	padding: 0.125rem 0.625rem;
-	border-radius: 0.3125rem;
+	border-radius: 40px;
 	background: $primary-color;
 	color: #ffffff;	
 	line-height: 231.6%;
