mediaqueries accueil + error

--- a/front/src/components/Error/style.scss
+++ b/front/src/components/Error/style.scss
@@ -10,12 +10,24 @@
 		color: #FF6060;
 		font-size: 288px;
 		font-weight: 700;
+		@media only screen and (max-width: 435px) {
+			font-size: 98px;
+			padding-block: 113px;	
+        
+        
+		}
 	}
 
 	&-subtitle {		
 		color: #FF6060;
 		font-weight: 500;		
 		font-size: 36px;
+		@media only screen and (max-width: 435px) {
+		font-size: 18px;		
+        width: 260px;
+		margin: 0 auto;
+        
+		}
 	}
 
 	&-link {
@@ -25,7 +37,12 @@
 		font-weight: 500;		
 		text-decoration-line: underline;
 		margin-block: 139px;
-		
+		@media only screen and (max-width: 435px) {
+			
+			margin-block: 113px;	
+        
+        
+		}
 
 	}
 }
