--- a/front/src/components/Banner/Banner.scss
+++ b/front/src/components/Banner/Banner.scss
@@ -15,4 +15,9 @@
     font-weight: 700;
     line-height: 140%; 
     z-index: 2;
+    @media only screen and (max-width: 435px) {
+        
+        font-size: 24px;
+        padding-left: 16px;
+    }
 }
