--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -18,7 +18,11 @@
 		 color: #fff;
 		 text-align: center;
 		 padding: 10px;	
-		 	
+		 @media only screen and (max-width: 435px) {
+        padding-bottom: 48px;
+        
+        
+		 }	
         
 	}
 
