--- a/front/src/components/Navbar/Navbar.scss
+++ b/front/src/components/Navbar/Navbar.scss
@@ -45,7 +45,7 @@
     margin: 0 auto;      
     max-width: 1240px;
     @media only screen and (max-width: 435px) {
-        
+        padding-top: 26px;
         justify-content: center; 
         gap: 26px;
         
