--- a/front/src/components/Collapse/Collapse.scss
+++ b/front/src/components/Collapse/Collapse.scss
@@ -10,6 +10,12 @@
 	background-color: $primary-color;
 	cursor: pointer;
 	transition: background-color 0.6s ease;
+	@media only screen and (max-width: 435px) {
+			
+		height: 30px;	
+	
+	
+	}
 
 	&-section {
 		display: flex;
@@ -25,6 +31,12 @@
 		font-style: normal;
 		font-weight: 700;
 		line-height: 142.6%;
+		@media only screen and (max-width: 435px) {
+			
+			font-size: 13px;	
+        
+        
+		}
 
 	}
 
@@ -64,4 +76,13 @@
 	width: 1023px;
 	margin: 0 auto;
 	padding-block: 38px;
+	@media only screen and (max-width: 435px) {
+			
+	width: 335px;
+	padding-block: 19px;
+
+	
+	
+	}
+	
 }
