--- a/front/src/pages/A-propos/Apropos.scss
+++ b/front/src/pages/A-propos/Apropos.scss
@@ -15,6 +15,14 @@
   border-radius: 25px;
   box-shadow: 0 6px #f6f6f6;
   background-image: url('../../assets/aPropos.png');
+  @media only screen and (max-width: 435px) {
+		width: 335px;
+    height: 111px;
+    margin: 19px auto 0;	
+    	
+      
+      
+  }
 
   &:before {
     content: "";
