--- a/front/src/pages/Annonces/Annonces.scss
+++ b/front/src/pages/Annonces/Annonces.scss
@@ -10,6 +10,13 @@
 		font-size: 36px;
 		font-weight: 500;
 		line-height: 142.6%;
+
+		@media only screen and (max-width: 435px) {
+			
+		font-size: 18px;		
+        
+        
+		}
 		
 	}
 	&-location {
@@ -20,6 +27,12 @@
 		font-size: 18px;
 		font-weight: 500;
 		line-height: 142.6%;
+
+		@media only screen and (max-width: 435px) {
+			
+			font-size: 14px;			
+			
+			}
 		
 	}
 	
@@ -28,6 +41,12 @@
 .tag-wrapper {
 	display: flex;
 	flex-wrap: wrap;
+	@media only screen and (max-width: 435px) {
+			
+		flex-wrap:nowrap;		
+        
+        
+		}
 }
 
 .rating {
@@ -77,6 +96,12 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	@media only screen and (max-width: 435px) {
+			
+		display: block;		
+        
+        
+		}
 }
 .description-equipments-wrapper{
 	display: flex;
@@ -87,3 +112,5 @@
 .custom-collapse {
 	width: 45%;
   }
+
+  
