--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -1,29 +1,31 @@
 @import '../../style.scss';
 
 .footer {
-	
-    &-kasa{
-        display: flex;
-        gap: 6px;
-        align-items: center;
-        justify-content: center;
-    }
+
+	&-kasa {
+		display: flex;
+		gap: 6px;
+		align-items: center;
+		justify-content: center;
+	}
+
 	&-wrapper {
-		 margin-top: auto;
-		 position: absolute;		 		 
-		 left: 0;
-		 right: 0;			 	
-		 width: 100%;
-		 background-color: black;
-		 color: #fff;
-		 text-align: center;
-		 padding: 10px;	
-		 @media only screen and (max-width: 435px) {
-        padding-bottom: 48px;
-        
-        
-		 }	
-        
+		margin-top: auto;
+		position: absolute;
+		left: 0;
+		right: 0;
+		width: 100%;
+		background-color: black;
+		color: #fff;
+		text-align: center;
+		padding: 10px;
+
+		@media only screen and (max-width: 435px) {
+			padding-bottom: 48px;
+			margin-top: 15px;
+
+		}
+
 	}
 
 	&-logos {
@@ -35,13 +37,13 @@
 	&-logo {
 		height: 2.25rem;
 		margin-top: 3.75rem;
-		
+
 	}
 
 	&-credit {
 		margin-top: 2.5rem;
 		font-size: 24px;
 		font-weight: 500;
-		
+
 	}
 }
