--- a/front/src/components/Collapse/Collapse.scss
+++ b/front/src/components/Collapse/Collapse.scss
@@ -52,8 +52,9 @@
 
 	&-content {
 		overflow: hidden;
-		
-	}
+    
+
+		}
 
 	&-text {
 		@include main-typography;
@@ -64,6 +65,13 @@
 		background: #f7f7f7;
 		color: black;
 		font-size: 18px;
+
+		@media only screen and (max-width: 435px) {
+			
+			font-size: 13px;	
+        
+        
+		}
 
 	}
 }
