--- a/front/src/pages/Accueil/Accueil.scss
+++ b/front/src/pages/Accueil/Accueil.scss
@@ -2,7 +2,8 @@
 body{
     margin: 0;
     padding: 0; 
-    background: #FFF;   
+    background: #FFF;
+	padding-inline: 25px;   
 }
 
 @media (min-width: 1440px) {
