fix footer phone

--- a/front/src/components/Collapse/Collapse.scss
+++ b/front/src/components/Collapse/Collapse.scss
@@ -87,7 +87,8 @@
 	@media only screen and (max-width: 435px) {
 			
 	width: 335px;
-	padding-block: 19px;
+	padding-top: 19px;
+	padding-bottom: 0;
 
 	
 	
