--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -22,7 +22,7 @@
 
 		@media only screen and (max-width: 435px) {
 			padding-bottom: 48px;
-			margin-top: 15px;
+			
 
 		}
 
@@ -44,6 +44,13 @@
 		margin-top: 2.5rem;
 		font-size: 24px;
 		font-weight: 500;
+
+		@media only screen and (max-width: 435px) {
+			width: 215px;
+			margin: 0 auto;
+			padding-top: 20px;
+
+		}
 
 	}
 }
