--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -18,10 +18,10 @@
 		background-color: black;
 		color: #fff;
 		text-align: center;
-		padding: 10px;
+		padding: 2%;
 
 		@media only screen and (max-width: 435px) {
-			padding-bottom: 48px;
+			padding-bottom: 20%;
 			
 
 		}
